<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NavLog Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_nav_log">NavLog</string>
    <string name="title_activity_log_in_or_regiister">Log In Or Register</string>
    <string name="title_activity_new_flight">Create A New Flight</string>
    <string name="Destination_Airport_Code">Destination Airport Code</string>
    <string name="Departure_Airport_Code">Departure Airport Code</string>
    <string name="Choose_Previous_Flight">Or Choose Previous Flight</string>
    <string name="Create_A_New_Flight">Enter Airport ICAO Codes</string>
    <string name="Submit">Submit</string>
    <string name="Email">Email</string>
    <string name="Havent_got_an_account_yet">Havent got an account yet?</string>
    <string name="Log_In">Log In</string>
    <string name="Password">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="title_activity_android_detech_touch">Map View</string>
    <string name="action_settings">Settings</string>
    <string name="calculate_flight">Calculate</string>
    <string name="waypoint_remove">Remove Waypoint</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_selector">Map Select</string>
    <string name="map_center">Center Map</string>
    <string name="title_activity_map_download">Download Maps</string>
    <string name="title_activity_calculations">Calculations</string>
    <string name="select_airplane">Select Airplane</string>
    <string name="add_new_airplane">Add Airplane</string>
    <string name="delete_airplane">Delete Airplane</string>
    <string name="title_activity_airplane_list">All Airplane Profiles</string>
    <string name="title_activity_airplane_profile">Airplane Profile</string>
    <string name="new_flight">New Flight</string>
    <string name="history">History</string>
    <string name="downloadMaps">Download Maps</string>
    <string name="maps">Select Map</string>
    <string name="airplaneProfiles">Airplane Profiles</string>
    <string name="airplaneName">Name</string>
    <string name="airplaneBrand">Brand</string>
    <string name="airplaneModel">Model</string>
    <string name="airplaneTailNumber">Tail Number</string>
    <string name="createCruisePerformance">Enter Performace Parameter</string>
    <string name="performanceParams">Cruise Performance Parameters</string>
    <string name="saveCruiseParameters">Save Performance Parameters</string>
    <string name="save_airplane_profile">Save Airplane Profile</string>
     <string name="save_calculations">Save</string>
    <string name="title_activity_cruise_performance">Cruise Performance</string>
    <string name="altitude">Altitude</string>
    <string name="rpm">RPM</string>
    <string name="Below20cStdTemp">Below 20C Standard Temperature</string>
    <string name="stdTemp">Standard Temperature</string>
    <string name="above20cStdTemp">Above 20C Standard Temperature</string>
    <string name="ktas">KTAS</string>
    <string name="gph">GPH</string>
    <string name="perform_calculations">Do Calculations</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_calculations_history">History</string>

</resources>