<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	
	<item
        android:id="@+id/select_map"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/maps"/>		
   	
	<item
        android:id="@+id/waypoint_remove_setting"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/waypoint_remove"/>
	
	<item
        android:id="@+id/center_map_setting"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/map_center"/>
	

	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	
	<item
        android:id="@+id/calculate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/calculate_flight"/>
    

</menu>