<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textEmail"
        android:layout_below="@+id/textEmail"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPassword"
        android:layout_alignRight="@+id/textEmail"
        android:layout_below="@+id/textPassword"
        android:onClick="logInPressed"
        android:layout_marginTop="46dp"
        android:text="@string/Log_In" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogIn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogIn"
        android:layout_marginBottom="69dp"
        android:text="@string/Sign_Up" />

    <TextView
        android:id="@+id/signupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignLeft="@+id/btnSignUp"
        android:layout_marginBottom="51dp"
        android:layout_marginLeft="17dp"
        android:text="@string/Havent_got_an_account_yet"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
