<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculationsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AirplaneProfileActivity" >
    <LinearLayout
    	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

	    <EditText
	        android:id="@+id/airplaneName"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/airplaneName" >
	
	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/airplaneBrand"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/airplaneBrand" >
	
	    </EditText>
	    
	    <EditText
	        android:id="@+id/airplaneModel"
	        android:singleLine="true"
	        android:imeOptions="actionNext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/airplaneModel" >
	
	    </EditText>
	    
	    <EditText
	        android:id="@+id/airplaneTailNum"
	        android:singleLine="true"
	        android:imeOptions="actionDone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/airplaneTailNumber" >
	
	    </EditText>
	
	        <TextView
	            android:id="@+id/performanceParamsTxt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/performanceParams"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	
	        <Button
	            android:id="@+id/createCruisePerformace"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="@dimen/activity_vertical_margin"
	            android:layout_marginLeft="@dimen/activity_horizontal_margin"
	            android:layout_marginRight="@dimen/activity_horizontal_margin"
	            android:layout_marginTop="@dimen/activity_vertical_margin"
	            android:onClick="launchCruisePerformanceActivity"
	            android:text="@string/createCruisePerformance" />
	        
			<ListView
			    android:id="@+id/list"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="@dimen/activity_horizontal_margin"
			    android:layout_marginTop="@dimen/activity_vertical_margin" >

		    </ListView>
	        
	        
		</LinearLayout>
				        
	</ScrollView>
		 

