<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculationsScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CruisePerformanceActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:orientation="vertical" >

    <EditText
        android:id="@+id/performanceAltitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/altitude"
        android:inputType="numberDecimal" >
			<requestFocus />
	</EditText>
	    <EditText
        android:id="@+id/performanceRPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/rpm"
        android:inputType="numberDecimal" >
	</EditText>

	    <TextView
	        android:id="@+id/Below20StdTemp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/Below20cStdTemp" />

	    <EditText
	        android:id="@+id/below20cKTAS"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:ems="10"
	        android:hint="@string/ktas"
	        android:inputType="numberDecimal" />

	    <EditText
	        android:id="@+id/below20cGPH"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/gph"
	        android:inputType="numberDecimal" />
	    
	    	    <TextView
	        android:id="@+id/stdTemp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/stdTemp" />

	    <EditText
	        android:id="@+id/stdKTAS"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:ems="10"
	        android:hint="@string/ktas"
	        android:inputType="numberDecimal" />

	    <EditText
	        android:id="@+id/stdGPH"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/gph"
	        android:inputType="numberDecimal" />
	        
	        
	    <TextView
	        android:id="@+id/above20StdTemp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/activity_vertical_margin"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/above20cStdTemp" />

	    <EditText
	        android:id="@+id/above20cKTAS"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:ems="10"
	        android:hint="@string/ktas"
	        android:inputType="numberDecimal" />

	    <EditText
	        android:id="@+id/above20cGPH"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/activity_horizontal_margin"
	        android:layout_marginRight="@dimen/activity_horizontal_margin"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:ems="10"
	        android:hint="@string/gph"
	        android:inputType="numberDecimal" />
              
	</LinearLayout>
</ScrollView>